--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.0.0"
   }
 }
