--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.0.0"
