--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/ishmyles/YelpCamp#readme",
   "dependencies": {
+    "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
