--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ishmyles/YelpCamp#readme",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.3",
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
@@ -25,6 +26,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
+    "mapbox-gl": "^2.8.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.2",
     "multer": "^1.4.4",
